# CMake_OpenGL

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat
Shared_Framework/: CMakeLists.txt  Shared_framework_config.cmake.in
Shared_Framework/ctest/: CMakeLists.txt
Shared_Framework/ctest/tests/: CameraTest.cpp  LoggSystemTest.cpp  TimeUtilsTest.cpp  TimerTest.cpp
Shared_Framework/include/: Buffers.h  Camera.h  Exception.h  FilePathSystem.h  FilePathSystem.inl  FrameBuffer.h  LoadImage.h  LoggerSystem.h  OpenGLException.h  OpenGLMessage.h  OpenGLMessage.inl  OpenGLStateManager.h  ReturnValue.h  ShadowFrameBuffer.h  TextureLoader.h  VertexArray.h
Shared_Framework/include/Core/: MacroDefinition.h  Point.h  Rect.h  Size.h  Widget.h
Shared_Framework/include/Experimental/: OpenGLCameraWindow.h  SkyBox.h  StencilTest.h  VertexArrayManager.h
Shared_Framework/include/ImGui/: ImGuiBoxLayout.h  ImGuiDashboard.h  ImGuiLayoutItem.h  ImGuiWidget.h  OpenGLLogMessage.h  VerticalLayout.h
Shared_Framework/include/ImGui/Fonts/: SQLiteDatabase.h
Shared_Framework/include/Model/: Animation.h  Bone.h  Mesh.h
Shared_Framework/include/Time/: RenderTimer.h  TimeUtils.h  Timer.h
Shared_Framework/src/: Buffer.cc  Camera.cc  Exception.cc  FilePathSystem.cc  FrameBuffer.cc  LoadImage.cc  LoggerSystem.cc  OpenGLException.cc  OpenGLMessage.cc  OpenGLStateManager.cc  OpenGLWindow.cc  Shader.cc  ShadowFrameBuffer.cc  TextureLoader.cc  VertexArray.cc
Shared_Framework/src/Core/: Point.cc  Rect.cc  Size.cc  Widget.cc
Shared_Framework/src/Experimental/: OpenGLCameraWindow.cc  SkyBox.cc  StencilTest.cc  VertexArrayManager.cc
Shared_Framework/src/Imgui/: HorizontalLayout.cc  ImGuiBoxLayout.cc  ImGuiDashboard.cc  ImGuiLayout.cc  ImGuiLayoutItem.cc  ImGuiWidget.cc  ImGuiWindow.cc  OpenGLLogWindow.cc  VerticalLayout.cc
Shared_Framework/src/Imgui/Fonts/: Language.cc  SQLiteDatabase.cc
Shared_Framework/src/Model/: Animation.cc  Animator.cc  AssimpGLMHelpers.cc  Bone.cc  Mesh.cc  Model.cc  ModelException.cc
Shared_Framework/src/Time/: RenderTimer.cc  TimeUtils.cc  Timer.cc
cmake/modules/: FIndGLFW.cmake  FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindIMGUI.cmake  FindModel.cmake  FindSQLite.cmake  find_paths.cmake
configuration/: root_directory.h.in
includes/: stb_image.h  stb_image_write.h
includes/GL/: eglew.h  glxew.h
includes/KHR/: khrplatform.h
includes/assimp/: Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  Logger.hpp  aabb.h  ai_assert.h  anim.h  camera.h  cexport.h  cfileio.h  cimport.h  color4.h  color4.inl  config.h  defs.h  fast_atof.h  importerdesc.h  light.h
includes/glad/: glad.h
includes/glm/: CMakeLists.txt  common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  integer.hpp
includes/glm/detail/: _noise.hpp  _swizzle.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_exponential.inl  func_geometric.inl  func_integer.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_trigonometric.inl  func_vector_relational.inl
includes/glm/ext/: _matrix_vectorize.hpp
includes/glm/gtc/: bitfield.hpp  color_space.inl  constants.inl  epsilon.hpp  epsilon.inl  integer.hpp  integer.inl
includes/glm/gtx/: associated_min_max.hpp  associated_min_max.inl  bit.hpp  closest_point.hpp  closest_point.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.inl  dual_quaternion.hpp  dual_quaternion.inl  easing.hpp  easing.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extended_min_max.hpp  functions.hpp  (+18 more)
includes/imgui/: .gitignore  imgui_impl_glfw.cpp  imgui_impl_opengl3_loader.h
includes/include/: Animation.h  Animator.h  AssimpGLMHelpers.h  Bone.h  BoneInfo.h  Buffer.h  Buffers.h  Camera.h  Exception.h  FilePathSystem.h  FilePathSystem.inl  FrameBuffer.h  LoadImage.h  LoggerSystem.h  Mesh.h  MeshData.h  Model.h  OpenGLException.h  OpenGLMainsWindow.h  OpenGLMessage.h  OpenGLMessage.inl  OpenGLStateManager.h  OpenGLWindow.h  Shader.h  SharedFrameworkExport.h  TextureLoader.h  TimeUtils.h  VertexArray.h  Widget.h
lib/: assimp.lib  glfw3.lib
resources/glsl/: cube_maps.frag  cube_maps.vert  sky_box.frag  sky_box.vert  stencil_test.frag  stencil_test.vert
src/: glad.c
src/advanced_Lighting/: CascadedShadowMapping.h  ImGuiMainWindow.cc  ImGuiMainWindow.h  OpenGLMainWindow.cc  PointShadow.h  ShadowMappingDepthWindow.cc  ShadowMappingDepthWindow.h  advanced_lighting.vert  point_shadow_depth.frag  point_shadow_depth.geom  point_shadow_depth.vert  shadow_mapping.frag  shadow_mapping.vert  shadow_mapping_depth.vert
src/advanced_OpenGL/: OpenGLMainWindow.cc  OpenGLMainWindow.h  blending.frag  depth_setting.frag  depth_setting.vert  depth_setting_far.frag  main.cpp
src/ctests/: CMakeLists.txt  CameraTest.cpp  LoggSystemTest.cpp  TimeUtilsTest.cpp  TimerTest.cpp
src/frame_buffers/: main.cpp
src/googletest-1.14.0/: CMakeLists.txt
src/implementation/: Animation.cc  Animator.cc  AssimpGLMHelpers.cc  Bone.cc  Buffer.cc  Camera.cc  Exception.cc  FilePathSystem.cc  FrameBuffer.cc  LoadImage.cc  LoggerSystem.cc  Mesh.cc  Model.cc  OpenGLException.cc  OpenGLMainsWindow.cc  OpenGLMessage.cc  OpenGLStateManager.cc  OpenGLWindow.cc  Shader.cc  ShadowFrameBuffer.cc  TextureLoader.cc  TimeUtils.cc  VertexArray.cc  VertexArrayManager.cc  Widget.cc
src/model_loading/: OpenGLMainWindow.cc  OpenGLMainWindow.h  main.cpp
src/skeletal_animation/: SkeletalAnimation.cc  SkeletalAnimation.h  animation_model.frag  animation_model.vert  main.cpp
src/started_opengl/: OpenGLMainWindow.cpp  OpenGLMainWindow.h  main.cc  text.vert
src/started_opengl_texture/: OpenGLMainWindow.cc  OpenGLMainWindow.h  main.cpp  texture.frag
src/text/: lang_mapping.txt
(+179 files in other folders)
